--- a/template/task_index.html
+++ b/template/task_index.html
@@ -21,7 +21,7 @@
   </table>
 
   <form action="/tasks" method="POST">
-    <input type="hidden" name="CSRF_TOKEN" id="csrf_token" >
+    <input type="hidden" name="CSRF_TOKEN">
 
     <label for="time">Time</label>
     <select name="time">
@@ -45,20 +45,6 @@
     <input type="submit" value="Submit">
   </form>
 
-  <script>
-  (function(){
-    function csrfToken() {
-      var fields = document.cookie.split(';');
-      for (var i = 0; i < fields.length; ++i) {
-        var kv = fields[i].split('=');
-	if (kv[0] === "_csrf") {
-	  return kv[1];
-	}
-      }
-      return null;
-    }
-    document.getElementById("csrf_token").value = csrfToken();
-  })();
-  </script>
+  <script src="/assets/csrf.js"></script>
 </body>
 </html>
