--- a/template/login.html
+++ b/template/login.html
@@ -3,12 +3,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <script src="/assets/csrf.js"></script>
   <title>Mugil</title>
 </head>
 
 <body>
   <form action="/login" method="POST">
-    <input type="hidden" name="CSRF_TOKEN" id="csrf_token" >
+    <input type="hidden" name="CSRF_TOKEN">
 
     <label for="email">Email</label>
     <input type="input" name="email" id="email" placeholder="Email">
@@ -18,21 +19,5 @@
 
     <input type="submit" value="Login">
   </form>
-
-  <script>
-  (function(){
-    function csrfToken() {
-      var fields = document.cookie.split(';');
-      for (var i = 0; i < fields.length; ++i) {
-        var kv = fields[i].split('=');
-	if (kv[0] === "_csrf") {
-	  return kv[1];
-	}
-      }
-      return null;
-    }
-    document.getElementById("csrf_token").value = csrfToken();
-  })();
-  </script>
 </body>
 </html>
